--- a/SeenIt/package.json
+++ b/SeenIt/package.json
@@ -1,11 +1,7 @@
 {
   "name": "SeenIt",
-  "version": "0.0.1",
-  "dependencies": {
-    "handlebars": "^4.0.11",
-    "jquery": "^3.3.1",
-    "sammy": "^0.7.6"
-  },
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "handlebars": "^4.0.11",
+    "sammy": "^0.7.6"
+  }
 }
